[package]
name = "diskhound"
version = "0.1.1"
edition = "2021"
description = "A simple CLI tool to find the largest subdirectories"
license = "MIT"
repository = "https://github.com/hritikvalluvar/diskhound"
readme = "README.md"
keywords = ["disk", "usage", "cli", "directory", "size"]
categories = ["command-line-utilities"]
exclude = ["target/"]

[dependencies]
jwalk = "0.8"
clap = { version = "4", features = ["derive"] }
humansize = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
